migrating folder locations

--- a/webpage.html
+++ b/webpage.html
@@ -1,63 +1,21 @@
-<!doctype html>
 <h1>UMRF Ventures Data</h1>
+
 <p>
+
 <a href="/static/Agent_Weekly.xlsx">Agent Weekly Data</a> (Auto-updates every Monday)<br /><br />
+
 <a href="/static/UMRF_SQL_Weekly.sqlite">Agent Weekly SQL Database</a> (Auto-updates every Monday)<br /><br />
+
 <a href="/static/UMRF_SQL_Daily.sqlite">Agent Daily SQL Database</a> (Auto-updates Daily)<br /><br />
-<h2>Weekly Graphs</h2>
-Auto-update every Monday<br />
+
+<h2>Weekly Graphs</h2><br /><br />
+
 <a href="static/avgFCR.png" download="AverageFCR"><img src="static/avgFCR.png" width="550" height = "auto"></a>
-<a href="static/avgTicket.png" download="Ticket %"><img src="static/avgTicket.png" width="550" height = "auto"></a><br />
-<a href="static/avgNR.png" download="AverageNR"><img src="static/avgNR.png" width="550" height = "auto"></a>
-<a href="static/avgAHT.png" download="AverageAHT"><img src="static/avgAHT.png" width="550" height = "auto"></a><br />
-<h2>Yesterday's Top Performers</h2>
-<html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-    $(function(){
-      $("#Div1").load("static/dayFCR.html");
-      $("#Div2").load("static/dayAHT.html");
-      $("#Div3").load("static/dayINC.html");
-      $("#Div4").load("static/dayNR.html");
-    });
-    </script>
-  </head>
 
-  <body>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div1"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div2"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div3"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div4"></div></div>
-  </body>
-</html>
-<br />
-*A minimum of 5 calls must have been taken to have been considered.
-<h2>Last Week's Top Performers</h2>
-<html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script>
-    $(function(){
-      $("#Div5").load("static/weekFCR.html");
-      $("#Div6").load("static/weekAHT.html");
-      $("#Div7").load("static/weekINC.html");
-      $("#Div8").load("static/weekNR.html");
-    });
-    </script>
-  </head>
+<a href="static/avgTicket.png" download="Ticket %"><img src="static/avgTicket.png" width="550" height = "auto"></a><br /><br />
 
-  <body>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div5"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div6"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div7"></div></div>
-     <div style="padding: 0px; background-color: #ffffff; display: inline-block; vertical-align: top;"><div id="Div8"></div></div>
-  </body>
-</html>
-<br />
-*A minimum of 20 calls must have been taken to have been considered.
-<h2>Flow Diagram</h2>
-<img src="static/flowdiag.png" width="700" height="auto"><br />
+<img src="static/flowdiag.png" width="700" height="auto"><br /><br />
+
 If you experience any issues please email me at kylejlynch@gmail.com
-<br /><br />
+
 </p>
